--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node ../../scripts/vercel-build.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,28 +17,28 @@
     "@gencv/utils": "file:../../packages/utils",
     "@google/genai": "^1.19.0",
     "@sparticuz/chromium": "^118.0.0",
+    "autoprefixer": "^10.4.21",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
     "next": "14.2.5",
     "next-themes": "^0.2.1",
+    "postcss": "^8.5.6",
     "puppeteer-core": "^21.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
-    "autoprefixer": "^10.4.21",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.5.6",
     "puppeteer": "^24.20.0",
-    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
 }
