--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "cd apps/web && npm run build",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "apps/web/.next",
   "installCommand": "npm install",
-  "framework": "nextjs",
   "functions": {
     "apps/web/app/api/generate-pdf/route.ts": {
       "maxDuration": 60
