--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "node ../../scripts/vercel-build.js",
     "build": "next build",
+    "vercel-build": "node ../../scripts/vercel-build.js && npm run build",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
