--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd apps/web && npm run vercel-build",
+  "buildCommand": "npm run build --filter=@gencv/web",
   "outputDirectory": "apps/web/.next",
   "installCommand": "npm install",
   "functions": {
