feat: Update package.json and package-lock.json to include @types/react and @types/react-dom; modify vercel.json build command for consistency

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run build --filter=@gencv/web",
+  "buildCommand": "npx turbo build --filter=@gencv/web",
   "outputDirectory": "apps/web/.next",
   "installCommand": "npm install",
   "functions": {
