--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,9 @@
     "@gencv/utils": "file:../../packages/utils",
     "@google/genai": "^1.19.0",
     "@sparticuz/chromium": "^118.0.0",
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
@@ -31,15 +34,12 @@
     "react-hook-form": "^7.47.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/node": "^20.8.7",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.2.5",
-    "puppeteer": "^24.20.0",
-    "typescript": "^5.2.2"
+    "puppeteer": "^24.20.0"
   }
 }
