feat: Refactor PDF generation logic to prioritize puppeteer-core; update package.json and vercel.json for improved build process and package exports

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "apps/*",
     "packages/*"
   ],
-  "packageManager": "npm@10.2.3"
+  "packageManager": "npm@10.2.3",
+  "dependencies": {
+    "puppeteer": "^24.20.0"
+  }
 }
