--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.5",
     "next-themes": "^0.2.1",
     "postcss": "^8.5.6",
+    "puppeteer": "^24.20.0",
     "puppeteer-core": "^21.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,7 +40,6 @@
   },
   "devDependencies": {
     "eslint": "^8.52.0",
-    "eslint-config-next": "14.2.5",
-    "puppeteer": "^24.20.0"
+    "eslint-config-next": "14.2.5"
   }
 }
