--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "npx turbo build --filter=@gencv/web",
+  "framework": "nextjs",
+  "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/.next",
-  "installCommand": "npm install",
+  "installCommand": "npm install && cd apps/web && npm install",
   "functions": {
     "apps/web/app/api/generate-pdf/route.ts": {
       "maxDuration": 60
