feat: Update build and install commands in package.json and vercel.json for improved workspace handling

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "private": true,
   "scripts": {
     "dev": "turbo run dev",
-    "build": "turbo run build",
+    "build": "npm run build --workspace=@gencv/web",
     "type-check": "turbo run type-check",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
     "dev:web": "turbo run dev --filter=@gencv/web",
     "build:web": "turbo run build --filter=@gencv/web",
-    "vercel-build": "turbo run build --filter=@gencv/web",
+    "build:turbo": "turbo run build",
+    "vercel-build": "npm run build --workspace=@gencv/web",
     "setup": "node setup.js",
     "test:backend": "node test-backend.js",
     "test:api": "node test-api.js",
