--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "cd apps/web && npm run build",
+  "buildCommand": "npm run build --workspace=@gencv/web",
   "outputDirectory": "apps/web/.next",
-  "installCommand": "npm install && cd apps/web && npm install",
+  "installCommand": "npm install",
   "functions": {
     "apps/web/app/api/generate-pdf/route.ts": {
       "maxDuration": 60
