--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "buildCommand": "npm run build --workspace=@gencv/web",
-  "outputDirectory": "apps/web/.next",
+  "outputDirectory": ".next",
   "installCommand": "npm install",
   "functions": {
     "apps/web/app/api/generate-pdf/route.ts": {
